hphp/hack/test/typecheck/reactive/mutable_call_on_immutable_value2.php.exp
File "mutable_call_on_immutable_value2.php", line 11, characters 3-14:
Cannot call mutable function on immutable expression (Typing[4214])
File "mutable_call_on_immutable_value2.php", line 5, characters 19-19:
This function is marked <<__Mutable>>, so it has a mutable $this.
File "mutable_call_on_immutable_value2.php", line 11, characters 4-10:
Consider wrapping this expression with Rx\mutable to forward mutability.
