hphp/hack/test/typecheck/reactive/mutable_call_on_immutable_value2.php
<?hh // partial

class A {
  <<__Rx, __Mutable>>
  public function g():void {
  }
}

<<__Rx>>
function f(): void {
  (new A())->g();
}
